# MagicLeap2Reading

./: .gitattributes  .gitignore  LICENSE  README.md  hera_repdat1.csv  hera_spo2.csv  imu.csv  pose.csv
HeraLeto/: HLTO_Readings_Final_ios.py  HLTO_Readings_Linux.py  HLTO_Readings_ios.py  HLTO_Readings_win.py  analyze_hera_repdat1.py  hera_advert_metrics.csv  hera_hr_temp.csv  hera_repdat1_decoded.csv  scan_hera.py
ML2NativeRecorder/: settings.gradle.kts
ML2NativeRecorder/app/: build.gradle.kts
ML2NativeRecorder/app/src/main/: AndroidManifest.xml
ML2NativeRecorder/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ML2NativeRecorder/app/src/main/java/com/example/ml2nativerecorder/: MainActivity.kt  (+1 more)
ML2NativeRecorder/app/src/main/res/values/: strings.xml  themes.xml
ML2NativeRecorder/gradle/wrapper/: gradle-wrapper.properties
ML2RawImu_2022/Assets/: ImuStreamer.cs  ML2.unity
ML2RawImu_2022/Assets/Scenes/: SampleScene.unity
ML2RawImu_2022/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
ML2RawImu_2022/Assets/XR/Settings/: OpenXR Package Settings.asset
ML2RawImu_2022/ML2RawImu_2022_BurstDebugInformation_DoNotShip/tempburstlibs/x86_64/: lib_burst_generated.txt
ML2RawImu_2022/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ML2RawImu_2022/UserSettings/: EditorUserSettings.asset
ML2RawImu_2022/UserSettings/Layouts/: default-2022.dwlt
ML2_readings/: imu.csv
nativeC/: fake_client.c  fake_client_win.c  fake_client_win.ilk
python/: server.py
python/ML2_readings/: headpose.csv  imu.csv  imu_rerun_from_csv.py  plot_imu_csv.py
(+2 files in other folders)
